<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/label_username"
       android:text="@string/username"
        android:layout_weight="25"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"/>

    <EditText
        android:id="@+id/input_username"
        android:layout_weight="75"
        android:layout_toRightOf="@id/label_username"
        android:hint="@string/username_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_field"
        android:layout_below="@id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_password"
            android:text="@string/password"
            android:layout_weight="25"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_weight="75"
            android:layout_toRightOf="@id/label_password"
            android:hint="@string/password_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_confirm_field"
        android:layout_below="@id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_password_confirm"
            android:text="@string/password_confirm"
            android:layout_weight="25"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"/>

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_weight="75"
            android:layout_toRightOf="@id/label_password_confirm"
            android:hint="@string/password_confirm_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:text="@string/submit"
        android:layout_below="@id/password_confirm_field"
        android:layout_alignRight="@id/password_confirm_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</RelativeLayout>